# Proyecto2_Graficas

./: README
OpenGL_Mesa/: CMakeLists.txt  Makefile
OpenGL_Mesa/common/: controls.cpp  objloader.cpp  quaternion_utils.cpp  shader.cpp  texture.cpp  vboindexer.cpp
OpenGL_Mesa/proyecto2/: proyecto2.cpp  proyecto2_assimp.cpp
WebGL_ThreeJS/: proyecto2.html
WebGL_ThreeJS/js/loaders/: EquirectangularToCubeGenerator.js  FBXLoader.js  HDRCubeTextureLoader.js  XLoader.js
WebGL_ThreeJS/js/objects/: Water.js
WebGL_ThreeJS/js/renderers/: SVGRenderer.js
